// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test <PeriodPickerWithPeriodType /> rendering: It should render a <PeriodTypeDropDown/> and <PeriodPicker/> when selectedPeriodType is truthy 1`] = `
<div>
  <span
    className="jsx-4279021995"
  >
    This is my label
  </span>
  <DropDown
    emptyLabel="Select Period Type"
    fullWidth={true}
    hintText="Select Period Type"
    menuItems={
      Array [
        Object {
          "displayName": "Yes",
          "id": "1",
        },
        Object {
          "displayName": "No",
          "id": "2",
        },
      ]
    }
    onChange={[MockFunction]}
    value="Quarterly"
  />
  <PeriodPicker
    onPickPeriod={[MockFunction]}
    periodType="Quarterly"
  />
  <style
    jsx={true}
  >
    
                .parsed-period {
                    margin-bottom: 16px;
                }
            
  </style>
  <JSXStyle
    id="4279021995"
  >
    .jsx-4279021995{text-align:left;color:#757575;margin-bottom:5px;font-size:14px;}
  </JSXStyle>
</div>
`;

exports[`Test <PeriodPickerWithPeriodType /> rendering: It should render a <PeriodTypeDropDown/> when selectedPeriodType is falsy 1`] = `
<div>
  <span
    className="jsx-4279021995"
  >
    This is my label
  </span>
  <DropDown
    emptyLabel="Select Period Type"
    fullWidth={true}
    hintText="Select Period Type"
    menuItems={
      Array [
        Object {
          "displayName": "Yes",
          "id": "1",
        },
        Object {
          "displayName": "No",
          "id": "2",
        },
      ]
    }
    onChange={[MockFunction]}
    value=""
  />
  <style
    jsx={true}
  >
    
                .parsed-period {
                    margin-bottom: 16px;
                }
            
  </style>
  <JSXStyle
    id="4279021995"
  >
    .jsx-4279021995{text-align:left;color:#757575;margin-bottom:5px;font-size:14px;}
  </JSXStyle>
</div>
`;

exports[`Test <PeriodPickerWithPeriodType /> rendering: It should render the parsed period when a period has been selected 1`] = `
<div>
  <span
    className="jsx-4279021995"
  >
    This is my label
  </span>
  <DropDown
    emptyLabel="Select Period Type"
    fullWidth={true}
    hintText="Select Period Type"
    menuItems={
      Array [
        Object {
          "displayName": "Yes",
          "id": "1",
        },
        Object {
          "displayName": "No",
          "id": "2",
        },
      ]
    }
    onChange={[MockFunction]}
    value="Daily"
  />
  <PeriodPicker
    onPickPeriod={[MockFunction]}
    periodType="Daily"
  />
  <div
    className="parsed-period"
  >
    January 1, 2018
  </div>
  <style
    jsx={true}
  >
    
                .parsed-period {
                    margin-bottom: 16px;
                }
            
  </style>
  <JSXStyle
    id="4279021995"
  >
    .jsx-4279021995{text-align:left;color:#757575;margin-bottom:5px;font-size:14px;}
  </JSXStyle>
</div>
`;
